@startuml

!theme plain
top to bottom direction
skinparam linetype ortho

abstract class Figura{
# scanner: Scanner
+ {abstract} calcularArea(): void
+ {abstract} pedirDatos(): void
# mostrarResultado(double) : void

}
class Circle {
  - radio : double
  + calculateArea(): void
  # pedirDatos(): void
}
class Pentagon {
    - lado :double
    - apotema :(double)
    + calculateArea(): void
     # pedirDatos(): void
}
class Rectangle {
  + calculateArea(): void
  # pedirDatos(): void
}
class Square {
   - base : double
   - altura : double
  + calculateArea(): void
  # pedirDatos(): void
}
class Triangle {
   - base : double
   - altura : double
  + calculateArea(): void
  # pedirDatos(): void
}
class App {
  + App():
  + main(String[]): void
}
Figura <|-- Circle
Figura <|-- Pentagon
Figura <|-- Rectangle
Figura <|-- Square
Figura <|-- Triangle

App --> Circle
App --> Pentagon
App --> Rectangle
App --> Square
App --> Triangle

@enduml